Added S3 file upload for companion image
