# api/openapi.json
@@ -325,6 +325,58 @@
         ]
       }
     },
+    '/users/companions/upload_image/{companion_id}': {
+      'post': {
+        'tags': [
+          'Companion'
+        ],
+        'summary': 'Upload image for companion ',
+        'operationId': 'upload_companion_image_users_companions_upload_image__companion_id__post',
+        'parameters': [
+          {
+            'required': True,
+            'schema': {
+              'title': 'Companion Id',
+              'type': 'integer'
+            },
+            'name': 'companion_id',
+            'in': 'path'
+          }
+        ],
+        'requestBody': {
+          'content': {
+            'multipart/form-data': {
+              'schema': {
+                '$ref': '#/components/schemas/Body_upload_companion_image_users_companions_upload_image__companion_id__post'
+              }
+            }
+          },
+          'required': True
+        },
+        'responses': {
+          '200': {
+            'description': 'Successful Response',
+            'content': {
+              'application/json': {
+                'schema': {
+                  '$ref': '#/components/schemas/UploadCompanionImage'
+                }
+              }
+            }
+          },
+          '422': {
+            'description': 'Validation Error',
+            'content': {
+              'application/json': {
+                'schema': {
+                  '$ref': '#/components/schemas/HTTPValidationError'
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     '/users/companions/{companion_id}/': {
       'delete': {
         'tags': [
@@ -1036,13 +1088,26 @@
           }
         }
       },
+      'Body_upload_companion_image_users_companions_upload_image__companion_id__post': {
+        'title': 'Body_upload_companion_image_users_companions_upload_image__companion_id__post',
+        'required': [
+          'file'
+        ],
+        'type': 'object',
+        'properties': {
+          'file': {
+            'title': 'File',
+            'type': 'string',
+            'format': 'binary'
+          }
+        }
+      },
       'Companion': {
         'title': 'Companion',
         'required': [
           'name',
           'companion_type',
           'notes',
-          'image',
           'user_id',
           'companion'
         ],
@@ -1057,10 +1122,6 @@
           },
           'notes': {
             'title': 'Notes',
-            'type': 'string'
-          },
-          'image': {
-            'title': 'Image',
             'type': 'string'
           },
           'user_id': {
@@ -1078,8 +1139,7 @@
         'required': [
           'name',
           'companion_type',
-          'notes',
-          'image'
+          'notes'
         ],
         'type': 'object',
         'properties': {
@@ -1092,10 +1152,6 @@
           },
           'notes': {
             'title': 'Notes',
-            'type': 'string'
-          },
-          'image': {
-            'title': 'Image',
             'type': 'string'
           }
         }
@@ -1506,6 +1562,22 @@
             'title': 'Table',
             'type': 'string',
             'default': 'User'
+          }
+        }
+      },
+      'UploadCompanionImage': {
+        'title': 'UploadCompanionImage',
+        'type': 'object',
+        'properties': {
+          'message': {
+            'title': 'Message',
+            'type': 'string',
+            'default': 'Error Uploading image'
+          },
+          'uploaded': {
+            'title': 'Uploaded',
+            'type': 'boolean',
+            'default': False
           }
         }
       },
